--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,72 @@
         <item name="colorAccent">@color/color_accent</item>
     </style>
 
+    <style name="icon">
+        <item name="android:layout_width">@dimen/size_small_24</item>
+        <item name="android:layout_height">@dimen/size_small_24</item>
+    </style>
+
+    <style name="icon.left">
+        <item name="android:layout_marginLeft">@dimen/spacing_normal_16</item>
+        <item name="android:layout_marginTop">@dimen/size_small_24</item>
+        <item name="android:layout_gravity">top|left</item>
+    </style>
+
+    <style name="icon.right">
+        <item name="android:layout_marginRight">@dimen/spacing_medium_32</item>
+        <item name="android:layout_marginTop">@dimen/size_small_24</item>
+    </style>
+
+    <style name="disable_edit_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:enabled">false</item>
+        <item name="android:focusable">false</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/grey_light</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+    </style>
+
+    <style name="linear_layout_edit_text">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">@dimen/size_large_72</item>
+        <item name="android:layout_marginLeft">@dimen/spacing_medium_32</item>
+        <item name="android:layout_marginRight">@dimen/spacing_normal_16</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">bottom</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="view_delimiter">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/line_size</item>
+        <item name="android:layout_marginLeft">@dimen/size_large_72</item>
+        <item name="android:background">@color/grey_light</item>
+    </style>
+
+    <style name="linear_layout_score_box">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginBottom">@dimen/spacing_med_28</item>
+        <item name="android:layout_marginTop">28dp</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="text_view_score_box">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+
+    </style>
+
+    <style name="text_view_score_box.score">
+        <item name="android:textSize">@dimen/font_med_24</item>
+    </style>
+
+    <style name="text_view_score_box.description">
+        <item name="android:textSize">@dimen/font_normal_16</item>
+    </style>
 </resources>
