Выполнил: 1.Реализовать получение фотографии из камеры и галлереи 2.Реализовать вызов неявных intent`ов - звонок, отправка e-mail, просмотр профиля vk, просмотр репозитория GitHub 3.Реализовать экран авторизации (по макету) 4.Отерефакторить проект (убрать хардкод, навести порядок в проекте)

--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -13,7 +13,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="@dimen/spacing_normal_16"
-        android:src="@drawable/userfoto"
+        android:src="@drawable/user_photo"
         />
 
     <LinearLayout
