--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,17 +20,51 @@
             style="@style/custom_AppBarLayout">
 
             <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:contentScrim="@color/color_primary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="256dp"
+                    android:fitsSystemWindows="true">
 
-                <ImageView
-                    android:id="@+id/user_photo_img"
-                    style="@style/image_view_user_photo"
-                    android:src="@drawable/userfoto"
-                    />
+                    <ImageView
+
+                        android:id="@+id/user_photo_img"
+                        style="@style/image_view_user_photo"
+                        android:src="@drawable/user_photo"
+                        />
+                    <RelativeLayout
+                        android:id="@+id/profile_placeholder"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/grey_background"
+                        android:visibility="gone">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/change_user_photo"
+                            android:textColor="@color/white"
+                            android:fontFamily="sans-serif-medium"
+                            android:layout_centerHorizontal="true"
+                            android:layout_above="@+id/photo_placeholder"
+                            android:layout_marginBottom="@dimen/spacing_small_8"/>
+                        <ImageView
+                            android:id="@+id/photo_placeholder"
+                            android:layout_width="@dimen/placeholder_photo_size_90"
+                            android:layout_height="@dimen/placeholder_photo_size_90"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/add_a_photo_48px"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginBottom="@dimen/size_medium_56"
+                            />
+                    </RelativeLayout>
+
+                </FrameLayout>
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -40,269 +74,10 @@
                     />
             </android.support.design.widget.CollapsingToolbarLayout>
 
-
         </android.support.design.widget.AppBarLayout>
 
+        <include layout="@layout/user_profile_content"/>
 
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                tools:context=".ui.activities.MainActivity">
-                <!--ScoreBoxes-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/spacing_largerest_112"
-                    android:background="@color/grey"
-                    android:orientation="horizontal">
-                    <!--Scorebox rating-->
-                    <LinearLayout
-                        style="@style/linear_layout_score_box"
-                        android:layout_weight="0.25">
-
-                        <TextView
-                            android:id="@+id/score_box_rating_tv"
-                            style="@style/text_view_score_box.score"
-                            android:text="@string/score_reit_5"
-                            />
-
-                        <TextView
-                            style="@style/text_view_score_box.description"
-                            android:text="@string/score_desription_rating"
-                            />
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="@dimen/line_size"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="28dp"
-                        android:layout_marginTop="28dp"
-                        android:background="@color/grey_light"></View>
-                    <!--Scorebox lines of code-->
-                    <LinearLayout
-                        style="@style/linear_layout_score_box"
-                        android:layout_weight="0.5">
-
-                        <TextView
-                            android:id="@+id/score_box_lines_code_tv"
-                            style="@style/text_view_score_box.score"
-                            android:text="@string/score_reit_5"
-                            />
-
-                        <TextView
-                            style="@style/text_view_score_box.description"
-                            android:text="@string/score_description_lines_code"
-                            />
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="@dimen/line_size"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="28dp"
-                        android:layout_marginTop="28dp"
-                        android:background="@color/grey_light"></View>
-                    <!--Scorebox projects-->
-                    <LinearLayout
-                        style="@style/linear_layout_score_box"
-                        android:layout_weight="0.25
-            ">
-
-                        <TextView
-                            android:id="@+id/score_box_projects_tv"
-                            style="@style/text_view_score_box.score"
-                            android:text="@string/score_reit_5"
-                            />
-
-                        <TextView
-                            style="@style/text_view_score_box.description"
-                            android:text="@string/score_description_projects"
-                            />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <!-- Account fields-->
-                <!-- mobile phone-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        style="@style/icon.left"
-                        android:src="@drawable/ic_call_gray_24dp"/>
-
-                    <LinearLayout
-                        style="@style/linear_layout_edit_text">
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <EditText
-                                android:id="@+id/account_mobile_phone_ev"
-                                style="@style/disable_edit_text"
-                                android:hint="@string/hint_mobile_phone_et"
-                                android:inputType="phone"
-                                android:text="@string/phone_num"
-                                />
-
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <ImageView
-                        android:id="@+id/account_mobile_phone_call_img"
-                        style="@style/icon.right"
-                        android:src="@drawable/ic_phone_in_talk_gray_24dp"/>
-                </LinearLayout>
-
-                <View style="@style/view_delimiter"/>
-                <!--email-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        style="@style/icon.left"
-                        android:src="@drawable/ic_email_gray_24dp"/>
-
-                    <LinearLayout
-                        style="@style/linear_layout_edit_text">
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <EditText
-                                android:id="@+id/account_email_ev"
-                                style="@style/disable_edit_text"
-                                android:hint="@string/hint_e_mail_et"
-                                android:inputType="textEmailAddress"
-                                android:text="@string/e_mail"
-                                />
-
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <ImageView
-                        android:id="@+id/account_email_sent_img"
-                        style="@style/icon.right"
-                        android:src="@drawable/ic_send_gray_24dp"/>
-                </LinearLayout>
-
-                <View style="@style/view_delimiter"/>
-                <!--vk account-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        style="@style/icon.left"
-                        android:src="@drawable/ic_vk_logo_gray_24dp"/>
-
-                    <LinearLayout
-                        style="@style/linear_layout_edit_text">
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <EditText
-                                android:id="@+id/account_vk_ev"
-                                style="@style/disable_edit_text"
-                                android:hint="@string/hint_vk_et"
-                                android:text="@string/vk_login"
-                                />
-
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <ImageView
-                        android:id="@+id/account_vk_open_img"
-                        style="@style/icon.right"
-                        android:src="@drawable/ic_look_gray_24dp"/>
-                </LinearLayout>
-
-                <View style="@style/view_delimiter"/>
-                <!--repository-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        style="@style/icon.left"
-                        android:src="@drawable/ic_github_gray_24dp"/>
-
-                    <LinearLayout
-                        style="@style/linear_layout_edit_text"
-                        android:layout_height="wrap_content"
-                        android:minHeight="@dimen/size_large_72">
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <EditText
-                                android:id="@+id/account_repository_ev"
-                                style="@style/disable_edit_text"
-                                android:hint="@string/hint_repo_et"
-                                android:text="@string/repo"
-                                />
-
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <ImageView
-                        android:id="@+id/account_repository_open_img"
-                        style="@style/icon.right"
-                        android:src="@drawable/ic_look_gray_24dp"/>
-                </LinearLayout>
-
-                <View style="@style/view_delimiter"/>
-                <!--about me-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        style="@style/icon.left"
-                        android:src="@drawable/ic_account_circle_gray_24dp"/>
-
-                    <LinearLayout
-                        style="@style/linear_layout_edit_text"
-                        android:layout_height="wrap_content">
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <EditText
-                                android:id="@+id/account_about_me_ev"
-                                style="@style/disable_edit_text"
-                                android:hint="@string/hint_about_me_et"
-                                android:inputType="textMultiLine"
-                                android:minLines="1"
-                                android:text="@string/lorem_ipsum"
-                                />
-
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <ImageView
-                        style="@style/icon.right"/>
-                </LinearLayout>
-
-
-            </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/floating_action_button"
