--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,16 +21,19 @@
     <dimen name="fab_right_space">8dp</dimen>
 
     <!-- Fonts -->
-    <dimen name="font_small_12">12dp</dimen>
-    <dimen name="font_normal_14">14dp</dimen>
-    <dimen name="font_normal_16">16dp</dimen>
-    <dimen name="font_medial_20">20dp</dimen>
-    <dimen name="font_med_24">24dp</dimen>
-    <dimen name="font_medium_34">34dp</dimen>
-    <dimen name="font_large_45">45dp</dimen>
-    <dimen name="font_larger_56">56dp</dimen>
-    <dimen name="font_largest_112">112dp</dimen>
+    <dimen name="font_normal_12">12sp</dimen>
+    <dimen name="font_normal_15">15sp</dimen>
+    <dimen name="font_large_16">16sp</dimen>
+    <dimen name="font_large_18">18sp</dimen>
+    <dimen name="font_large_20">20sp</dimen>
+    <dimen name="font_larger_22">22sp</dimen>
+    <dimen name="font_larger_24">24sp</dimen>
+
+
     <dimen name="profile_image_size">256dp</dimen>
+    <dimen name="placeholder_photo_size_90">90dp</dimen>
+    <dimen name="spacing_72">72dp</dimen>
+    <dimen name="spacing_28">28dp</dimen>
 
 
 </resources>
