--- a/app/src/main/res/layout/user_profile_content.xml
+++ b/app/src/main/res/layout/user_profile_content.xml
@@ -31,7 +31,7 @@
 
                 <TextView
                     style="@style/text_view_score_box.description"
-                    android:text="@string/score_desription_rating"
+                    android:text="@string/score_description_rating"
                     />
             </LinearLayout>
 
@@ -119,7 +119,7 @@
                 android:src="@drawable/ic_phone_in_talk_gray_24dp"/>
         </LinearLayout>
 
-        <View style="@style/view_delimiter"/>
+        <View style="@style/view_horizontal_delimiter"/>
         <!--email-->
         <LinearLayout
             android:layout_width="match_parent"
@@ -154,7 +154,7 @@
                 android:src="@drawable/ic_send_gray_24dp"/>
         </LinearLayout>
 
-        <View style="@style/view_delimiter"/>
+        <View style="@style/view_horizontal_delimiter"/>
         <!--vk account-->
         <LinearLayout
             android:layout_width="match_parent"
@@ -188,7 +188,7 @@
                 android:src="@drawable/ic_look_gray_24dp"/>
         </LinearLayout>
 
-        <View style="@style/view_delimiter"/>
+        <View style="@style/view_horizontal_delimiter"/>
         <!--repository-->
         <LinearLayout
             android:layout_width="match_parent"
@@ -224,7 +224,7 @@
                 android:src="@drawable/ic_look_gray_24dp"/>
         </LinearLayout>
 
-        <View style="@style/view_delimiter"/>
+        <View style="@style/view_horizontal_delimiter"/>
         <!--about me-->
         <LinearLayout
             android:layout_width="match_parent"
