--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,7 @@
 
     <!-- Fonts -->
     <dimen name="font_normal_12">12sp</dimen>
+    <dimen name="font_normal_14">14sp</dimen>
     <dimen name="font_normal_15">15sp</dimen>
     <dimen name="font_large_16">16sp</dimen>
     <dimen name="font_large_18">18sp</dimen>
